# asya

./: .gitignore  .octocov.yml  .pre-commit-config.yaml  .ruff.toml  .vulture_whitelist.py  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  index.html  mkdocs.yml  plan.md  requirements-dev.txt  sitemap.xml
.github/: release-drafter.yml
.github/workflows/: changelog.yml  ci.yml  docs.yml  release-drafter.yml  release.yml
.pre-commit-hooks/: check-symlinks.sh
architecture/: README.md  asya-runtime.md  autoscaling.md  index.html
architecture/asya-actor/: index.html
architecture/asya-cli/: index.html
architecture/asya-crew/: index.html
architecture/asya-gateway/: index.html
architecture/asya-operator/: index.html
architecture/asya-runtime/: index.html
architecture/asya-sidecar/: index.html
concepts/: index.html
deploy/: README.md
docs/: README.md  concepts.md  index.md  motivation.md
examples/: README.md
install/: aws-eks.md  local-kind.md
motivation/: index.html
operate/: monitoring.md
operator/: .gitignore  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
quickstart/: for-platform_engineers.md
scripts/: README.md  build-images.sh  load-images-minikube.sh  port-forward-grafana.sh
search/: search_index.json
src/: README.md  build-images.sh
src/asya-cli/: README.md  pyproject.toml
src/asya-cli/asya_cli/: mcp.py  port_forward.py
src/asya-tools/: README.md  pyproject.toml
src/asya-tools/asya_tools/: mcp.py  port_forward.py
testing/: PARAMETRIZATION_PLAN.md
(+389 files in other folders)
